--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,24 +1,37 @@
-<div class="container color-dark">
-    <div class="col">
-        <p>Add a bucket list item</p>
-    </div>
-    <div class="col">
-        <p>Your bucket list ({{ itemCount }})</p>
-    </div>
-</div>
-<div class="container color-light" [@goals]="goals.length">
-    <div class="col">
-        <p class="sm"> Use this form below to add a new bucket list goal. What do you want to do</p>
+<div class ="container color-dark">
+  
+  <div class = "col">
+   
+    <p>add a bucket list item</p>
+  
+  </div>
+ 
+  <div class = "col">
+  
+    <p>Tu lista de deseos ({{  itemCount }})</p>
+  
+  </div>
 
-        <form>
-            <input type="text" class="txt" name="item"  placeholder="Life goal..."[(ngModel)]="goalText">
-            <input type="submit" class="btn" [value]="btnText" (click)="addItem()">
-        </form>
-    </div>
-    <div class="col">
-        <p class="life-container" *ngFor="let goal of goals; let i = index" (click)="removeItem(i)">
-            {{ goal }}
-        
-        </p>
-    </div>
 </div>
+<div class ="container color-ligth" [@goals]="goals.length ">
+  
+    <div class = "col">
+     
+      <p class="sm">Use this form below to add a bucket list goal. What do yo want to do with..</p>
+      <form>
+        <input type="text" class="txt" name="item" placeholder="Life goal..." [(ngModel)]= "goalText">
+        <br> <span>{{goalText}}</span>
+        
+        <input type="submit" class ="btn" value="{{ btntxt }}" (click)="AgregarMeta()">
+      </form>
+    </div>
+   
+    <div class = "col">
+     <p class="life-container" *ngFor="let goal of goals; let i = index" (click)="removeItem(i)">
+
+        {{goal.nombre}} - {{goal.album}}
+      </p>
+    
+    </div>
+  
+  </div>
