--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,9 +1,9 @@
 <p>
-    This is what I'm all about, <a href="" (click)="sendMeHome()"><strong>Take me back</strong></a>,
+    Ghost es lo maximoooo <a href="" (click)="sendMeHome()"><strong>Agregar mas canciones</strong></a>,
 </p>
 
 <ul>
-    <li *ngFor="let goal of goals">
-        {{ goal }}
+    <li *ngFor="canciones guardadas">
+        {{ goal.nombre }} - {{ goal.album}}
     </li>
 </ul>
