--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <ul>
-  <li><a routerLink="">Home</a></li>
-  <li><a routerLink="about/48">About</a></li>
+  <li><a routerLink="">Ghost</a></li>
+  <li><a routerLink="about/48">Canciones</a></li>
 </ul>
 
 <router-outlet></router-outlet>
