--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,13 +2,13 @@
   
   <div class = "col">
    
-    <p>add a bucket list item</p>
+    <p>Agrega una cancion de ghost</p>
   
   </div>
  
   <div class = "col">
   
-    <p>Tu lista de deseos ({{  itemCount }})</p>
+    <p>Lista de canciones ({{  itemCount }})</p>
   
   </div>
 
@@ -17,10 +17,10 @@
   
     <div class = "col">
      
-      <p class="sm">Use this form below to add a bucket list goal. What do yo want to do with..</p>
+      <p class="sm">Agrega el nombre de una cancion .</p>
       <form>
         <input type="text" class="txt" name="item" placeholder="Life goal..." [(ngModel)]= "goalText">
-        <br> <span>{{goalText}}</span>
+        
         
         <input type="submit" class ="btn" value="{{ btntxt }}" (click)="AgregarMeta()">
       </form>
