--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,10 +6,10 @@
     padding: .4em 1.3emp;
 }
 .color-dark {
-    background: #2885C4;
+    background: #000000;
 }
 .color-light {
-    background: #57B3F1;
+    background: #CAC263;
 }
 
 input.txt {
@@ -22,13 +22,13 @@ input.btn {
     border: 0;
     display:block;
     padding:1em 3em;
-    background: #A5F883;
-    color: #003A61;
+    background: #530a00;
+    color: #ffffff;
     margin-bottom:1em;
     cursor:pointer;
 }
 .life-container {
-    background: #3FA0E1;
+    background: #c09e05;
     padding:.5em;
     font-weight:bold;
     cursor:pointer;
